// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser > generateTypeScriptByEndpoint > should generate snapshot for GET /access/packageUnit/queryList 1`] = `
"// ========== /access/packageUnit/queryList - GET ==========
export interface TQueryListParams {
  disabled?: boolean; // 
}

export interface TQueryListResponse {
  id?: number; // 代理主键id
  disabled?: boolean; // 禁用状态
  createTime?: string; // 新增时间
  createBy?: string; // 新增人
  updateTime?: string; // 修改时间
  updateBy?: string; // 修改人
  packageUnitCode?: string; // 代码
  packageUnitNameEn?: string; // 英文名称
  packageUnitNameCn?: string; // 中文名称
}"
`;

exports[`parser > generateTypeScriptByEndpoint > should generate snapshot for GET /access/packageUnit/queryPackageInfo 1`] = `
"// ========== /access/packageUnit/queryPackageInfo - GET ==========
export interface TQueryPackageInfoParams {
  packageCode: string; // 
  packageName: string; // 
}

export interface TQueryPackageInfoResponse {
  id?: number; // 代理主键id
  disabled?: boolean; // 禁用状态
  createTime?: string; // 新增时间
  createBy?: string; // 新增人
  updateTime?: string; // 修改时间
  updateBy?: string; // 修改人
  packageUnitCode?: string; // 代码
  packageUnitNameEn?: string; // 英文名称
  packageUnitNameCn?: string; // 中文名称
}"
`;

exports[`parser > generateTypeScriptByEndpoint > should generate snapshot for POST /access/packageUnit/queryPackageInfos 1`] = `
"// ========== /access/packageUnit/queryPackageInfos - POST ==========
export interface TQueryPackageInfosParams {
  packageNameEn: string; // 英文名称
  packageCode: string; // 包装单位代码
}

export interface TQueryPackageInfosResponse {
  id?: number; // 代理主键id
  disabled?: boolean; // 禁用状态
  createTime?: string; // 新增时间
  createBy?: string; // 新增人
  updateTime?: string; // 修改时间
  updateBy?: string; // 修改人
  packageUnitCode?: string; // 代码
  packageUnitNameEn?: string; // 英文名称
  packageUnitNameCn?: string; // 中文名称
}"
`;

exports[`parser > generateTypeScriptByEndpoint > should generate snapshot for POST /access/port/validPortDisableStatus 1`] = `
"// ========== /access/port/validPortDisableStatus - POST ==========
export interface TValidPortDisableStatusParams {
  standardCodes: string[]; // 港口五码code集合
}

export type TValidPortDisableStatusResponse = boolean;"
`;

exports[`parser > generateTypeScriptByEndpoint > should generate snapshot for PUT /access/resource/update/roleResource 1`] = `
"// ========== /access/resource/update/roleResource - PUT ==========
export interface TRoleResourceParams {
  roleId: number; // 角色id
  resourceIds?: number[]; // 资源id
}

export type TRoleResourceResponse = boolean;"
`;
